# Radicalized

./: .gitignore  :  README.md  cli.py  main.py  pyproject.toml  radicale_manager.py  utils.py
managers/: calendar_manager.py  contact_manager.py  journal_manager.py  manager.py  task_manager.py  utils.py
