[project]
name = "radicalized"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "caldav>=2.2.6",
    "google-api-python-client>=2.190.0",
    "google-auth>=2.48.0",
    "google-auth-oauthlib>=1.2.4",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "vobject>=0.9.9",
]
